homepage initial draft

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -2363,8 +2363,119 @@ video {
   position: relative;
 }
 
+#app .-bottom-s13 {
+  bottom: -120px;
+}
+
 #app .isolate {
   isolation: isolate;
+}
+
+#app .mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#app .-my-s13 {
+  margin-top: -120px;
+  margin-bottom: -120px;
+}
+
+#app .mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mb-s13 {
+  margin-bottom: 120px;
+}
+
+#app .-mb-s13 {
+  margin-bottom: -120px;
+}
+
+#app .-mt-s13 {
+  margin-top: -120px;
+}
+
+#app .-mt-s12 {
+  margin-top: -96px;
+}
+
+#app .-mt-s7 {
+  margin-top: -32px;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .ml-auto {
+  margin-left: auto;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mt-s6 {
+  margin-top: 24px;
+}
+
+#app .mt-s8 {
+  margin-top: 40px;
+}
+
+#app .mt-0 {
+  margin-top: 0px;
+}
+
+#app .mr-s4 {
+  margin-right: 16px;
+}
+
+#app .mt-0 {
+  margin-top: 0px;
+}
+
+#app .ml-s4 {
+  margin-left: 16px;
 }
 
 #app .block {
@@ -2411,24 +2522,80 @@ video {
   height: 12px;
 }
 
-#app .h-icon-64 {
-  height: 64px;
+#app .h-full {
+  height: 100%;
 }
 
-#app .h-icon-32 {
-  height: 32px;
+#app .h-auto {
+  height: auto;
 }
 
-#app .h-icon-24 {
+#app .h-\[360px\] {
+  height: 360px;
+}
+
+#app .h-\[620px\] {
+  height: 620px;
+}
+
+#app .h-\[800px\] {
+  height: 800px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
   height: 24px;
 }
 
-#app .h-icon-20 {
-  height: 20px;
+#app .h-\[310px\] {
+  height: 310px;
 }
 
-#app .h-icon-12 {
-  height: 12px;
+#app .h-s6 {
+  height: 24px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
+  height: 24px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
+  height: 24px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
+  height: 24px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
+  height: 24px;
+}
+
+#app .h-\[310px\] {
+  height: 310px;
+}
+
+#app .h-s6 {
+  height: 24px;
 }
 
 #app .w-icon-64 {
@@ -2451,24 +2618,130 @@ video {
   width: 12px;
 }
 
-#app .w-icon-64 {
-  width: 64px;
+#app .w-full {
+  width: 100%;
 }
 
-#app .w-icon-32 {
-  width: 32px;
+#app .w-\[223px\] {
+  width: 223px;
 }
 
-#app .w-icon-24 {
-  width: 24px;
+#app .w-\[2px\] {
+  width: 2px;
 }
 
-#app .w-icon-20 {
-  width: 20px;
+#app .w-full {
+  width: 100%;
 }
 
-#app .w-icon-12 {
-  width: 12px;
+#app .w-1\/2 {
+  width: 50%;
+}
+
+#app .w-full {
+  width: 100%;
+}
+
+#app .w-\[104px\] {
+  width: 104px;
+}
+
+#app .w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+#app .w-\[104px\] {
+  width: 104px;
+}
+
+#app .w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+#app .w-\[104px\] {
+  width: 104px;
+}
+
+#app .w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+#app .w-\[104px\] {
+  width: 104px;
+}
+
+#app .max-w-\[813px\] {
+  max-width: 813px;
+}
+
+#app .max-w-\[1020px\] {
+  max-width: 1020px;
+}
+
+#app .max-w-content {
+  max-width: 1120px;
+}
+
+#app .max-w-\[350px\] {
+  max-width: 350px;
+}
+
+#app .max-w-content {
+  max-width: 1120px;
+}
+
+#app .max-w-\[430px\] {
+  max-width: 430px;
+}
+
+#app .max-w-content {
+  max-width: 1120px;
+}
+
+#app .max-w-\[510px\] {
+  max-width: 510px;
+}
+
+#app .max-w-content {
+  max-width: 1120px;
+}
+
+#app .max-w-\[510px\] {
+  max-width: 510px;
+}
+
+#app .max-w-\[740px\] {
+  max-width: 740px;
+}
+
+#app .max-w-\[450px\] {
+  max-width: 450px;
+}
+
+#app .max-w-\[740px\] {
+  max-width: 740px;
+}
+
+#app .max-w-\[450px\] {
+  max-width: 450px;
+}
+
+#app .max-w-\[740px\] {
+  max-width: 740px;
+}
+
+#app .max-w-\[540px\] {
+  max-width: 540px;
+}
+
+#app .flex-1 {
+  flex: 1 1 0%;
 }
 
 #app .border-collapse {
@@ -2491,6 +2764,82 @@ video {
   flex-wrap: wrap;
 }
 
+#app .items-center {
+  align-items: center;
+}
+
+#app .justify-center {
+  justify-content: center;
+}
+
+#app .justify-between {
+  justify-content: space-between;
+}
+
+#app .gap-s6 {
+  gap: 24px;
+}
+
+#app .gap-s8 {
+  gap: 40px;
+}
+
+#app .gap-s9 {
+  gap: 48px;
+}
+
+#app .gap-s5 {
+  gap: 20px;
+}
+
+#app .gap-s14 {
+  gap: 160px;
+}
+
+#app .gap-s5 {
+  gap: 20px;
+}
+
+#app .gap-s14 {
+  gap: 160px;
+}
+
+#app .gap-s5 {
+  gap: 20px;
+}
+
+#app .gap-s14 {
+  gap: 160px;
+}
+
+#app .gap-s5 {
+  gap: 20px;
+}
+
+#app .gap-s14 {
+  gap: 160px;
+}
+
+#app .gap-s10 {
+  gap: 64px;
+}
+
+#app .gap-s5 {
+  gap: 20px;
+}
+
+#app .gap-s14 {
+  gap: 160px;
+}
+
+#app .gap-s10 {
+  gap: 64px;
+}
+
+#app .justify-self-end {
+  justify-self: end;
+}
+
 #app .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -2499,6 +2848,457 @@ video {
 
 #app .border {
   border-width: 1px;
+}
+
+#app .bg-primary-500 {
+  background-color: var(--primary-500);
+}
+
+#app .bg-primary-800 {
+  background-color: var(--primary-800);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-secondary-500 {
+  background-color: var(--secondary-500);
+}
+
+#app .bg-secondary-100 {
+  background-color: var(--secondary-100);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-300 {
+  background-color: var(--primary-300);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-300 {
+  background-color: var(--primary-300);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-300 {
+  background-color: var(--primary-300);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-300 {
+  background-color: var(--primary-300);
+}
+
+#app .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-300 {
+  background-color: var(--primary-300);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-100 {
+  background-color: var(--primary-100);
+}
+
+#app .bg-primary-50 {
+  background-color: var(--primary-50);
+}
+
+#app .bg-primary-800 {
+  background-color: var(--primary-800);
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .p-s11 {
+  padding: 80px;
+}
+
+#app .p-s13 {
+  padding: 120px;
+}
+
+#app .py-s13 {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-s9 {
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
+#app .py-s9 {
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .px-s13 {
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#app .py-s8 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+#app .px-s10 {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+#app .py-s11 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .px-s10 {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+#app .py-s11 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .px-s10 {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+#app .py-s11 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .px-s10 {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+#app .py-s11 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .px-s10 {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+#app .py-s11 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .px-s8 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s12 {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+#app .py-s6 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+#app .py-s4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\] {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s7 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .pt-s13 {
+  padding-top: 120px;
+}
+
+#app .pb-s14 {
+  padding-bottom: 160px;
+}
+
+#app .pt-s10 {
+  padding-top: 64px;
+}
+
+#app .text-center {
+  text-align: center;
+}
+
+#app .font-bold {
+  font-weight: 700;
 }
 
 #app .uppercase {
@@ -2513,9 +3313,30 @@ video {
   font-style: italic;
 }
 
+#app .text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-100 {
+  color: var(--secondary-100);
+}
+
+#app .text-primary-800 {
+  color: var(--primary-800);
+}
+
+#app .text-secondary-100 {
+  color: var(--secondary-100);
+}
+
 #app .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+#app .opacity-25 {
+  opacity: 0.25;
 }
 
 #app .outline {
