--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -1,3 +1,5 @@
-<nav>
-    Navigation
+<nav class="py-s7 flex justify-between items-center">
+    <div></div>
+    <p>Navigation</p>
+    <div></div>
 </nav>
