--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,3 +1,9 @@
-<div>
-    Banner
+<div class="py-s4 px-[36px] flex justify-between items-center bg-primary-800 text-secondary-100">
+    <div></div>
+    <div class="flex items-center">
+        <p class="mr-s4 opacity-25"><</p>
+        <p class="mt-0 faux-p-sm">Banner announcement or ad with potential discount <b>CODENAME</b></p>
+        <p class="mt-0 ml-s4 opacity-25">></p>
+    </div>
+    <div></div>
 </div>
