--- a/sections/floating_cta.liquid
+++ b/sections/floating_cta.liquid
@@ -1,9 +1,9 @@
 <div class="w-full max-w-content mx-auto py-s8">
-    <div class="bg-secondary-100">
+    <div class="bg-secondary-50">
         <div class="max-w-[510px] p-s11">
-            <h2>{{ section.settings.heading }}</h2>
+            <h2 class="faux-h4 text-primary-800">{{ section.settings.heading }}</h2>
             <p class="mt-s8">{{ section.settings.text }}</p>
-            <a class="mt-s8" href="{{ section.settings.buttonDest.url }}">{{ section.settings.buttonLabel }}</a>
+            <a class="mt-s8 btn btn--sm" href="{{ section.settings.buttonDest.url }}">{{ section.settings.buttonLabel }}</a>
         </div>
     </div>
 
