--- a/css/application.css
+++ b/css/application.css
@@ -1,3 +1,7 @@
+@import "./typography.css";
+@import "./buttons.css";
+@import "./product-card.css";
+@import "./nav.css";
 /* purgecss start ignore */
 @tailwind base;
 /* purgecss end ignore */
