--- a/sections/featured-categories.liquid
+++ b/sections/featured-categories.liquid
@@ -1,6 +1,6 @@
 <div class="mx-auto text-center">
-    <p> {{ section.settings.preheading }} </p>
-    <h2> {{ section.settings.heading }} </h2>
+    <p class="faux-sh"> {{ section.settings.preheading }} </p>
+    <h2 class="faux-h4 max-w-[800px] mx-auto"> {{ section.settings.heading }} </h2>
     <div class="flex gap-s8">
         {% for block in section.blocks %}
             <div class="flex-1">
