--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -1,13 +1,29 @@
-<div class="py-s13 px-s9">
+<div class="py-s13 px-s9 max-w-content mx-auto">
     <h2 class="text-center">{{ section.settings.heading }}</h2>
-    <div class="flex">
-        {% assign test = "copy-of-test-product,test-product" | split: "," %}
+    <div class="flex gap-24 mt-s8">
+        {% assign test = "copy-of-test-product,test-product,test-product,test-product" | split: "," %}
         {% for handle in test %}
             {% assign product = all_products[handle] %}
-            <div class="mt-s8 flex-1">
-                <h3 class="faux-p-lg font-bold">{{ product.title }}</h3>
-                <p>Brand</p>
-                <p class="">${{ product.price | money_without_currency }}</p>
+            <div class="flex-1">
+                <div>
+                <img src="{{ 'feature-product-shot-tee-coral.png' | asset_url }}" />
+            </div>
+                <div class="mt-s6">
+                    <h3 class="faux-p-lg font-bold text-black-900">{{ product.title }}</h3>
+                    <p class="mt-s4 text-black-400">Brand</p>
+                    <p class="mt-s4">${{ product.price | money_without_currency }}</p>
+                    <div class="h-s6 flex items-center gap-s1 mt-s2">
+                        <div class="product-variant--tile">
+                            <div class="dot bg-black-600"></div>
+                            <div class="disc"></div>
+                        </div>
+                        <div class="product-variant--tile">
+                            <div class="dot bg-black-600"></div>
+                            <div class="disc"></div>
+                        </div>
+                        <p class="faux-p-xs text-black-400">+5</p>
+                    </div>
+                </div>
             </div>
         {% endfor %}
     </div>
