--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -1,5 +1,116 @@
-<nav class="py-s7 flex justify-between items-center">
-    <div></div>
-    <p>Navigation</p>
-    <div></div>
+<script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
+<nav>
+    <ul class="nav-primary list-none flex-1 flex gap-[24px] h-full">
+        {% assign menuItems = "apparel,objects,featured" | split: ',' %}
+        {% for menuItem in menuItems %}
+            <li class="menu__item level--1 text-black-600 ui-base has-dropdown h-full">
+                <a class="menu__link h-full flex items-center">{{ menuItem | capitalize }}</a>
+                <ul class="menu__dropdown list-none absolute top-full left-0 w-full pb-s10 px-s13 bg-white gap-s8 z-10">
+                    {% for column in settings.blocks %}
+                        {% if column.settings.menu == menuItem %}
+                            {% if column.type == "link-list" %}
+                                <li class="menu-column flex-1">
+                                    <ul class="list-none">
+                                        {% for link in column.settings.linkList.links %}
+                                            <li class="ui text-primary-800 uppercase">
+                                                <a href="{{ link.url }}" class="dropdown__link--level-1">{{ link.title }}</a>
+                                                {% assign totalSublinks = link.links | size %}
+                                                {% if totalSublinks > 0 %}
+                                                    <ul class="list-none">
+                                                        {% for link in link.links %}
+                                                            <li>
+                                                                <a href="{{ link.url }}" class="dropdown__link--level-2">{{ link.title }}</a>
+                                                            </li>
+                                                        {% endfor %}
+                                                    </ul>
+                                                {% endif %}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
+                            {% elsif column.type == "feature-column" %}
+                                <li class="menu-column flex-1">
+                                    <img src="{{ 'nav-feature-fun-sun.jpg' | asset_url }}"/>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endfor %}
+    </ul>
+    <img src="{{ 'Logo-Wharf-Horizontal.svg' | asset_url }}" alt="The Wharf Store" width="350" height="35" loading="lazy"/>
+    <div class="flex-1 flex justify-end items-center">
+        <a href="{{ routes.cart_url }}" id="cart-icon-bubble" class="p-s2">
+            <img src="{{ '24-search.svg' | asset_url }}" width="24" height="24" loading="lazy"/>
+        </a>
+        <a href="{{ routes.cart_url }}" id="cart-icon-bubble" class="p-s2 ml-s5">
+            <img src="{{ '24-shopping-cart.svg' | asset_url }}" width="24" height="24" loading="lazy"/>
+        </a>
+        <a class="btn btn--sm ml-[36px]" href="/checkout">
+            Checkout
+        </a>
+    </div>
 </nav>
+
+
+{% schema %}
+    {
+        "name": "nav",
+        "class": "z-10",
+        "max_blocks": 12,
+        "blocks": [
+            {
+                "name": "Link List",
+                "type": "link-list",
+                "settings": [
+                    {
+                        "type": "select",
+                        "id": "menu",
+                        "label": "Menu",
+                        "options": [
+                            {
+                            "value": "apparel",
+                            "label": "Apparel"
+                            },
+                            {
+                            "value": "objects",
+                            "label": "Objects"
+                            },
+                            {
+                            "value": "featured",
+                            "label": "Featured"
+                            }
+                        ]
+                    },
+                    {
+                        "type": "link_list",
+                        "id": "linkList",
+                        "label": "Menu"
+                    }
+                ]
+            },
+            {
+                "name": "Feature Column",
+                "type": "feature-column",
+                "settings": [
+                    {
+                        "type": "text",
+                        "id":"label",
+                        "label":"Link Label"
+                    },
+                    {
+                        "type": "page",
+                        "id": "linkDest",
+                        "label": "Link Destination"
+                    },
+                    {
+                        "type": "image_picker",
+                        "id": "featuredImage",
+                        "label": "Featured Image"
+                    }
+                ]
+            }
+        ]
+    }
+{% endschema %}
