--- a/sections/sale-cta.liquid
+++ b/sections/sale-cta.liquid
@@ -1,9 +1,9 @@
-<div class="w-full max-w-[813px] mx-auto flex gap-s9">
-    <h2 class="w-[223px] text-secondary-100"> {{ section.settings.heading }} </h2>
+<div class="w-full max-w-[820px] mx-auto flex gap-s9">
+    <h2 class="faux-h4 w-[223px] text-secondary-100"> {{ section.settings.heading }} </h2>
     <div class="w-[2px] h-auto bg-secondary-500"></div>
     <div class="flex-1">
         <p class="text-white">{{ section.settings.text }}</p>
-        <a class="mt-s6" href="{{ block.settings.buttonDest.url }}">{{ section.settings.buttonLabel }} </a>
+        <a class="mt-s6 btn btn--sm" href="{{ block.settings.buttonDest.url }}">{{ section.settings.buttonLabel }} </a>
     </div>
 </div>
 
