--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -201,6 +201,29 @@ nav{
   display:none;
 }
 
+.dropdown__list-item--level-1:not(:first-child){
+  margin-top: 16px;
+}
+
+.dropdown__list--level-2{
+  margin-top: 20px;
+}
+
+.dropdown__link--level-1{
+  text-transform: uppercase;
+  color: var(--primary-800);
+}
+
+.dropdown__list-item--level-2:not(:first-child){
+  margin-top: 8px;
+}
+
+.dropdown__link--level-2{
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(102 102 102 / var(--tw-text-opacity));
+}
+
 /* purgecss start ignore */
 
 /*
