--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -5,20 +5,20 @@
         {% for menuItem in menuItems %}
             <li class="menu__item level--1 text-black-600 ui-base has-dropdown h-full">
                 <a class="menu__link h-full flex items-center">{{ menuItem | capitalize }}</a>
-                <ul class="menu__dropdown list-none absolute top-full left-0 w-full pb-s10 px-s13 bg-white gap-s8 z-10">
+                <ul class="menu__dropdown list-none absolute top-full left-0 w-full py-s10 px-s13 bg-white gap-s8 z-10">
                     {% for column in section.blocks %}
                         {% if column.settings.menu == menuItem %}
                             {% if column.type == "link-list" %}
                                 <li class="menu-column flex-1">
-                                    <ul class="list-none">
+                                    <ul class="dropdown_list--level-1 list-none ui-base">
                                         {% for link in column.settings.linkList.links %}
-                                            <li class="ui text-primary-800 uppercase">
+                                            <li class="dropdown__list-item--level-1">
                                                 <a href="{{ link.url }}" class="dropdown__link--level-1">{{ link.title }}</a>
                                                 {% assign totalSublinks = link.links | size %}
                                                 {% if totalSublinks > 0 %}
-                                                    <ul class="list-none">
+                                                    <ul class="dropdown__list--level-2 list-none">
                                                         {% for link in link.links %}
-                                                            <li>
+                                                            <li class="dropdown__list-item--level-2">
                                                                 <a href="{{ link.url }}" class="dropdown__link--level-2">{{ link.title }}</a>
                                                             </li>
                                                         {% endfor %}
@@ -30,7 +30,8 @@
                                 </li>
                             {% elsif column.type == "feature-column" %}
                                 <li class="menu-column flex-1">
-                                    <img src="{{ 'nav-feature-fun-sun.jpg' | asset_url }}"/>
+                                    <img src="{{ column.settings.featuredImage | image_url }}" class="object-cover"/>
+                                    <a href="{{ column.settings.linkDest }}" class="btn btn--borderless mt-s6">{{ column.settings.label }}</a>
                                 </li>
                             {% endif %}
                         {% endif %}
@@ -94,6 +95,25 @@
                 "name": "Feature Column",
                 "type": "feature-column",
                 "settings": [
+                        {
+                        "type": "select",
+                        "id": "menu",
+                        "label": "Menu",
+                        "options": [
+                            {
+                            "value": "apparel",
+                            "label": "Apparel"
+                            },
+                            {
+                            "value": "objects",
+                            "label": "Objects"
+                            },
+                            {
+                            "value": "featured",
+                            "label": "Featured"
+                            }
+                        ]
+                    },
                     {
                         "type": "text",
                         "id":"label",
