product feature layout and three-pane callout changes

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -179,25 +179,16 @@ html {
 
 nav{
   height: var(--nav-height-desktop);
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   max-width: 1296px;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
-@media (min-width: 1024px){
-  nav{
-    padding-left: 72px;
-    padding-right: 72px;
-  }
-}
-
-.menu__link:hover+.menu__dropdown, .menu__dropdown:hover{
-  display:flex;
+.menu__link:hover+.menu__dropdown,
+.menu__dropdown:hover{
+  display:block;
 }
 
 .menu__dropdown{
@@ -2704,6 +2695,22 @@ video {
   top: 100%;
 }
 
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-full{
+  top: 100%;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .-bottom-s13{
+  bottom: -120px;
+}
+
 #app .isolate{
   isolation: isolate;
 }
@@ -2781,6 +2788,122 @@ video {
   margin-left: 36px;
 }
 
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .ml-s5{
+  margin-left: 20px;
+}
+
+#app .ml-\[36px\]{
+  margin-left: 36px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .ml-s5{
+  margin-left: 20px;
+}
+
+#app .ml-\[36px\]{
+  margin-left: 36px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-s2{
+  margin-top: 8px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s3{
+  margin-top: 12px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s3{
+  margin-top: 12px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s3{
+  margin-top: 12px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s3{
+  margin-top: 12px;
+}
+
+#app .mt-\[28px\]{
+  margin-top: 28px;
+}
+
+#app .-mt-s7{
+  margin-top: -32px;
+}
+
+#app .mb-s13{
+  margin-bottom: 120px;
+}
+
 #app .block{
   display: block;
 }
@@ -2807,6 +2930,18 @@ video {
 
 #app .hidden{
   display: none;
+}
+
+#app .aspect-\[4\/3\]{
+  aspect-ratio: 4/3;
+}
+
+#app .aspect-\[3\/4\]{
+  aspect-ratio: 3/4;
+}
+
+#app .aspect-\[4\/5\]{
+  aspect-ratio: 4/5;
 }
 
 #app .h-auto{
@@ -2861,6 +2996,18 @@ video {
   height: 310px;
 }
 
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-s6{
+  height: 24px;
+}
+
+#app .h-\[620px\]{
+  height: 620px;
+}
+
 #app .max-h-\[800px\]{
   max-height: 800px;
 }
@@ -2895,6 +3042,10 @@ video {
   width: 12px;
 }
 
+#app .w-screen{
+  width: 100vw;
+}
+
 #app .w-\[720px\]{
   width: 720px;
 }
@@ -2909,6 +3060,14 @@ video {
 
 #app .w-\[104px\]{
   width: 104px;
+}
+
+#app .w-screen{
+  width: 100vw;
+}
+
+#app .w-full{
+  width: 100%;
 }
 
 #app .max-w-content{
@@ -2953,6 +3112,26 @@ video {
 
 #app .max-w-\[540px\]{
   max-width: 540px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
+}
+
+#app .max-w-\[1200px\]{
+  max-width: 1200px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
+}
+
+#app .max-w-content-lg{
+  max-width: 1296px;
+}
+
+#app .max-w-\[1020px\]{
+  max-width: 1020px;
 }
 
 #app .flex-1{
@@ -3031,6 +3210,62 @@ video {
   gap: 24px;
 }
 
+#app .gap-s8{
+  gap: 40px;
+}
+
+#app .gap-\[24px\]{
+  gap: 24px;
+}
+
+#app .gap-s8{
+  gap: 40px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s1{
+  gap: 4px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s1{
+  gap: 4px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s1{
+  gap: 4px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s1{
+  gap: 4px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s1{
+  gap: 4px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
 #app .justify-self-end{
   justify-self: end;
 }
@@ -3085,6 +3320,29 @@ video {
 #app .bg-black-600{
   --tw-bg-opacity: 1;
   background-color: rgb(102 102 102 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-black-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(102 102 102 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-800{
+  background-color: var(--primary-800);
+}
+
+#app .bg-primary-100{
+  background-color: var(--primary-100);
+}
+
+#app .object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 #app .object-cover{
@@ -3214,6 +3472,91 @@ video {
   padding-right: 36px;
 }
 
+#app .py-s10{
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+#app .px-s13{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#app .px-s5{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#app .py-s10{
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+#app .px-s13{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#app .px-s5{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#app .py-s13{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-s9{
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
+#app .px-54{
+  padding-left: 54px;
+  padding-right: 54px;
+}
+
+#app .py-s13{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-54{
+  padding-left: 54px;
+  padding-right: 54px;
+}
+
+#app .py-s13{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-54{
+  padding-left: 54px;
+  padding-right: 54px;
+}
+
+#app .py-s13{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-54{
+  padding-left: 54px;
+  padding-right: 54px;
+}
+
+#app .py-s13{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+#app .px-54{
+  padding-left: 54px;
+  padding-right: 54px;
+}
+
 #app .pb-s14{
   padding-bottom: 160px;
 }
@@ -3228,6 +3571,10 @@ video {
 
 #app .pb-s10{
   padding-bottom: 64px;
+}
+
+#app .pt-s13{
+  padding-top: 120px;
 }
 
 #app .text-center{
@@ -3284,6 +3631,70 @@ video {
 #app .text-black-900{
   --tw-text-opacity: 1;
   color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(102 102 102 / var(--tw-text-opacity));
+}
+
+#app .text-black-900{
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+#app .text-black-900{
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+#app .text-black-900{
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+#app .text-black-900{
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+#app .text-black-900{
+  --tw-text-opacity: 1;
+  color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
+#app .text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
 }
 
 #app .underline{
@@ -3343,4 +3754,11 @@ video {
   font-weight: 500;
   text-transform: capitalize;
   letter-spacing: 0;
+}
+
+@media (min-width: 1024px){
+  #app .lg\:px-72{
+    padding-left: 72px;
+    padding-right: 72px;
+  }
 }
