--- a/sections/three-pane-callout.liquid
+++ b/sections/three-pane-callout.liquid
@@ -1,9 +1,12 @@
 <div class="relative bg-primary-800 max-w-[1020px] mx-auto text-white text-center">
     <h2> {{ section.settings.heading }} </h2>
-    <h3 class="faux-p text-secondary-100"> {{ section.settings.subheading }} </h3>
+    <h3 class="faux-p text-secondary-100 mt-[28px]"> {{ section.settings.subheading }} </h3>
     <div class="flex relative w-full h-[620px] -bottom-s13 -mt-s7 gap-s6">
         {% for block in section.blocks %}
-        <div class="flex-1 bg-primary-100 flex justify-center items-center"> {{ block.settings.label }} </div>
+            <div class="flex-1 bg-primary-100 flex justify-center items-center">
+                <img src="{{ section.settings.image | image_url }}" class="object-cover w-full h-full object-cover"/>
+                <span>{{ block.settings.label }}</span>
+            </div>
         {% endfor %}
     </div>
 
