--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -5,38 +5,40 @@
         {% for menuItem in menuItems %}
             <li class="menu__item level--1 text-black-600 ui-base has-dropdown h-full">
                 <a class="menu__link h-full flex items-center">{{ menuItem | capitalize }}</a>
-                <ul class="menu__dropdown list-none absolute top-full left-0 w-full py-s10 px-s13 bg-white gap-s8 z-10">
-                    {% for column in section.blocks %}
-                        {% if column.settings.menu == menuItem %}
-                            {% if column.type == "link-list" %}
-                                <li class="menu-column flex-1">
-                                    <ul class="dropdown_list--level-1 list-none ui-base">
-                                        {% for link in column.settings.linkList.links %}
-                                            <li class="dropdown__list-item--level-1">
-                                                <a href="{{ link.url }}" class="dropdown__link--level-1">{{ link.title }}</a>
-                                                {% assign totalSublinks = link.links | size %}
-                                                {% if totalSublinks > 0 %}
-                                                    <ul class="dropdown__list--level-2 list-none">
-                                                        {% for link in link.links %}
-                                                            <li class="dropdown__list-item--level-2">
-                                                                <a href="{{ link.url }}" class="dropdown__link--level-2">{{ link.title }}</a>
-                                                            </li>
-                                                        {% endfor %}
-                                                    </ul>
-                                                {% endif %}
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
-                                </li>
-                            {% elsif column.type == "feature-column" %}
-                                <li class="menu-column flex-1">
-                                    <img src="{{ column.settings.featuredImage | image_url }}" class="object-cover"/>
-                                    <a href="{{ column.settings.linkDest }}" class="btn btn--borderless mt-s6">{{ column.settings.label }}</a>
-                                </li>
+                <div class="menu__dropdown w-screen bg-white absolute top-full left-0 py-s10 px-s13">
+                    <div class="flex max-w-[1200px] mx-auto bg-white gap-s8 z-10">
+                        {% for column in section.blocks %}
+                            {% if column.settings.menu == menuItem %}
+                                {% if column.type == "link-list" %}
+                                    <div class="menu-column flex-1">
+                                        <ul class="dropdown_list--level-1 list-none ui-base">
+                                            {% for link in column.settings.linkList.links %}
+                                                <li class="dropdown__list-item--level-1">
+                                                    <a href="{{ link.url }}" class="dropdown__link--level-1">{{ link.title }}</a>
+                                                    {% assign totalSublinks = link.links | size %}
+                                                    {% if totalSublinks > 0 %}
+                                                        <ul class="dropdown__list--level-2 list-none">
+                                                            {% for link in link.links %}
+                                                                <li class="dropdown__list-item--level-2">
+                                                                    <a href="{{ link.url }}" class="dropdown__link--level-2">{{ link.title }}</a>
+                                                                </li>
+                                                            {% endfor %}
+                                                        </ul>
+                                                    {% endif %}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                {% elsif column.type == "feature-column" %}
+                                    <div class="menu-column flex-1">
+                                        <img src="{{ column.settings.featuredImage | image_url }}" class="object-cover"/>
+                                        <a href="{{ column.settings.linkDest }}" class="btn btn--borderless mt-s6">{{ column.settings.label }}</a>
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                </ul>
+                        {% endfor %}
+                    </div>
+                </div>
             </li>
         {% endfor %}
     </ul>
@@ -62,7 +64,7 @@
 {% schema %}
     {
         "name": "nav",
-        "class": "z-10",
+        "class": "z-10 relative px-s5 lg:px-72",
         "max_blocks": 12,
         "blocks": [
             {
