featured categories styling

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -87,7 +87,8 @@
   /* -------------------------------------------------------- */
 }
 
-/** borderless/no background **/
+/**
+/no background **/
 
 .btn--borderless{
   background-color: transparent;
@@ -95,6 +96,7 @@
   padding-right: 0px;
   padding-top: 0px;
   padding-bottom: 8px;
+  text-transform: capitalize;
   background-image: radial-gradient(var(--secondary-300) 33%, rgba(255,255,255,0) 0%);
   background-position: bottom left;
   background-size: 6px 6px;
@@ -2772,16 +2774,16 @@ video {
   margin-top: 20px;
 }
 
+#app .-mt-s9{
+  margin-top: -48px;
+}
+
 #app .ml-\[36px\]{
   margin-left: 36px;
 }
 
 #app .mt-\[28px\]{
   margin-top: 28px;
-}
-
-#app .-mt-s9{
-  margin-top: -48px;
 }
 
 #app .block{
